fix pokemon image in pokemon list (edit code in adapter) edit toggle button and probability catch feature in pokemon detail

--- a/app/src/main/res/layout/activity_pokemon_detail.xml
+++ b/app/src/main/res/layout/activity_pokemon_detail.xml
@@ -155,7 +155,7 @@
                 android:layout_height="84dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/pokeball_toggle"
-                android:focusable="true"
+                android:focusable="false"
                 android:textOff=""
                 android:textOn=""
                 app:layout_constraintStart_toStartOf="parent"
