--- a/app/src/main/res/drawable/pokeball_toggle.xml
+++ b/app/src/main/res/drawable/pokeball_toggle.xml
@@ -4,6 +4,6 @@
         android:drawable="@drawable/pokeball"
         android:state_checked="true"/>
     <item
-        android:drawable="@drawable/ic_weight_24"
+        android:drawable="@drawable/ic_catch_24"
         android:state_checked="false"/>
 </selector>
