--- a/core/src/main/res/layout/item_list_pokemon.xml
+++ b/core/src/main/res/layout/item_list_pokemon.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="8dp"
+    android:layout_margin="16dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_pokemon"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
             android:padding="16dp"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
@@ -27,9 +27,8 @@
             <TextView
                 android:id="@+id/tv_pokemon_name"
                 android:text="Pikachu"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="24dp"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
